--- a/packages/css/src/components/switch/switch.scss
+++ b/packages/css/src/components/switch/switch.scss
@@ -12,6 +12,18 @@
   margin-block: 0;
   margin-inline: 0;
   opacity: 0%; /* to hide native input field in older iOS */
+
+  /* Focus is first set on the label next to a focussed checkbox button, and then
+    hidden when the focussed checkbox button doesn't have focus-visible.
+    This progressive enhancement means you get the benefits of focus-visible
+    while still showing a focus ring on browsers that don't support focus-visible (like older Safari) */
+  &:focus + label {
+    outline: auto;
+  }
+
+  &:focus:not(:focus-visible) + label {
+    outline: 0;
+  }
 }
 
 .amsterdam-switch__label {
@@ -19,6 +31,7 @@
   border-radius: calc(var(--amsterdam-switch-thumb-width) * 2);
   cursor: pointer;
   display: inline-block;
+  outline-offset: var(--amsterdam-switch-outline-offset);
   padding-block: 1px;
   padding-inline: 1px;
   transition: background-color 0.2s ease-in-out;
@@ -46,12 +59,6 @@
 .amsterdam-switch__input:disabled + .amsterdam-switch__label {
   background-color: var(--amsterdam-switch-disabled-background-color);
   cursor: not-allowed;
-}
-
-.amsterdam-switch__input:focus-visible + .amsterdam-switch__label {
-  outline-color: -webkit-focus-ring-color;
-  outline-offset: var(--amsterdam-switch-outline-offset);
-  outline-style: auto;
 }
 
 .amsterdam-switch__input:checked + .amsterdam-switch__label::before {
